--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,6 @@
 - Add analytics to server (not sure)
 - Add newsletter portal
 - Fix the website (a lot of work)
+- Move print driver installation process to main page of client to keep it alive even when visiting another sub-page
+- Make app runnable in the background
+- Build installers for MacOS and Linux too
