Remove unnecessary installation process if remote print driver is already installed; Added confirmation messages for deleting remote print driver; Updated todo list

--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,8 @@
 - Finish remote printing
 - Add Wake on LAN
-- Add analytics to server (not sure)
 - Add newsletter portal
 - Fix the website (a lot of work)
 - Move print driver installation process to main page of client to keep it alive even when visiting another sub-page
 - Make app runnable in the background
 - Build installers for MacOS and Linux too
-- Detect if print driver installation is unnecessary
+- Code sign my app (can't afford it yet)
