Updated todo list

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,9 @@
 - Add Wake on LAN
 - Finish Admin portal
 - Add App Portal
+- Tokens
+- Web Client
+- Discord Connection
 - Write Documentation 🙄🙄🙄
 - Code sign my app (can't afford it yet)
 - Get people to donate so I can upgrade my jsonbin subscription
